--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "dependencies": {
     "@chec/cli": "^1.3.0",
     "@chec/commerce.js": "^2.8.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
+    "semantic-ui-react": "^2.1.4",
     "spaces": "^0.0.2",
     "string-strip-html": "^13.2.3",
     "web-vitals": "^2.1.4"
